# zero2prod

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  configuration.yaml  docker-compose.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20211024205424_create_subscriptions_table.sql  20211112203458_add_status_to_subscriptions.sql  20211112203807_make_status_not_null_in_subscriptions.sql  20211112204106_create_subscription_tokens_table.sql  20220226215659_create_users_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  error.rs  lib.rs  main.rs  request_id.rs  startup.rs  telemetry.rs
src/domain/: email_address.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: confirm.rs  health_check.rs  mod.rs  newsletters.rs  subscriptions.rs
src/routes/subscriptions/: confirm.rs  mod.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
