[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.3.0"
chrono = "0.4.19"
config = "0.11.0"
http = "0.2.5"
hyper = "0.14.14"
log = "0.4.14"
reqwest = "0.11.6"
serde = { version="1.0.130", features=["derive"] }
serde-aux = "3.0.1"
structopt = "0.3.25"
tokio = { version="1.13.0", features=["macros", "rt-multi-thread"] }
tower = "0.4.10"
tower-http = { version="0.1.1", features=["trace"] }
tracing = { version="0.1.29", features=["log"] }
tracing-bunyan-formatter = "0.3.0"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.1", features = ["registry", "env-filter"] }
uuid = { version="0.8.2", features=["v4"] }
unicode-segmentation = "1.8.0"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
once_cell = "1.8.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
