[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.52"
axum = "0.4.5"
chrono = "0.4.19"
config = "0.11.0"
http = "0.2.6"
hyper = "0.14.17"
log = "0.4.14"
rand = { version = "0.8.4", features = ["std_rng"] }
reqwest = { version = "0.11.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
structopt = "0.3.26"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.11"
tower-http = { version = "0.2.2", features = ["trace", "request-id", "util"] }
tracing = { version = "0.1.30", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.8", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "0.8.2", features = ["v4"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"

[dependencies.sqlx]
version = "0.5.10"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
linkify = "0.8.0"
once_cell = "1.9.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1"
wiremock = "0.5.10"
