[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = { version = "0.3", features = ["std"] }
async-trait = "0.1.52"
axum = { version = "0.4.6", features = ["headers"] }
chrono = "0.4.19"
clap = { version = "3.1.2", features = ["derive"] }
config = "0.12.0"
futures = "0.3.21"
headers = "0.3.7"
http = "0.2.6"
hyper = "0.14.17"
log = "0.4.14"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.9", default-features = false, features = [
    "json",
    "rustls-tls",
] }
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
serde_with = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.12"
tracing = { version = "0.1.31", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.9", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "0.8.2", features = ["v4"] }
unicode-segmentation = "1.9.0"
validator = "0.14.0"

[dependencies.tower-http]
version = "0.2.3"
features = ["auth", "request-id", "sensitive-headers", "trace", "util"]

[dependencies.sqlx]
version = "0.5.11"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
linkify = "0.8.0"
once_cell = "1.9.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1"
wiremock = "0.5.10"
